--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "e-ride",
-    "slug": "e-ride",
+    "name": "PRO-C70",
+    "slug": "PRO-C70",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
